# ckb-witness-args-handwritten-reader

./: .gitignore  Cargo.toml  Makefile  README.md  binding.c  build.rs
.github/workflows/: rust.yml
c/: binding.c  ckb_syscalls.h  fuzzer.c  witness_args_handwritten_reader.h
c_support/: binding.c
examples/: corpus_generator.rs
src/tests/: mod.rs
tests/: Cargo.toml  Makefile  build.rs
tests/c_support/: fuzzer.c
