[package]
name = "ckb-witness-args-handwritten-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"
proptest = "1.0.0"
ckb-types = "0.110.0"

[build-dependencies]
cc = "1.0"
